# vgmdb-client

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
src/tests/: conftest.py
src/vgclient/: client.py  mapping.py  types.py  types_extension.py
